sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: not found: value i
		i = 0;
                ^AlgCombSort:15: error: not found: value i
		while( i+ecart < getNombreValeurs()){
                       ^AlgCombSort:16: error: not found: value i
			if (plusPetit(i+1, i)){
                                      ^AlgCombSort:17: error: not found: value i
				echange(i+1, i);
                                        ^AlgCombSort:20: error: not found: value i
			i++;
                        ^